Ensured satisfactory colour contrast on all text.

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -5,12 +5,6 @@ body {
     color: $gray-600;
 }
 
-p,
-ul,
-label {
-    color: $gray-600;
-}
-
 .text-shadow-sm {
     text-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
 }
