--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,5 @@
+$primary: #167cc0;
 $nav-link-padding-y: 1.5rem;
-$navbar-light-active-color: #167cc0;
+$navbar-light-active-color: $primary;
 $font-family-base: Raleway, sans-serif;
-$text-muted: $gray-500;
+$text-muted: #adb5bd;
